--- a/src/index.css
+++ b/src/index.css
@@ -21,12 +21,8 @@ body {
   background-image: url("https://www.transparenttextures.com/patterns/diagonal-waves.png");
 }
 
-main.home {
-  min-height: calc(100vh - 135px);
-}
-
-main.trash {
-  min-height: calc(100vh - 110px);
+main {
+  min-height: calc(100vh - 150px);
 }
 
 /* CLASSES */
